# auto-kaggle-master

./: .gitignore  EXPERIMENTS.md  README.md  config.yaml  program.md  pyproject.toml  run.py
agent/: __init__.py  auto_profile.py  exec_sandbox.py  gigachat_agent.py  llm.py  loop.py  notebook.py  pricing.py  prompts.py  react.py  tools.py  yandex_agent.py  yandex_openai_agent.py
automl_agent/: .gitignore  README.md  pyproject.toml  run.py
automl_agent/agent/: exec_sandbox.py  gigachat_agent.py  loop.py  prompts.py  react.py  tools.py
automl_agent/harness/: config.py  data.py  eda.py  metrics.py  model.py
automl_agent/tests/: conftest.py  test_exec_sandbox.py  test_react.py
competitions/competition-1/: data.txt  overview.txt
competitions/competition-2/: data.txt  overview.txt
competitions/competition-2-demo/: submission.csv  test.csv
harness/: __init__.py  config.py  contract.py  cv.py  model.py  sandbox.py
runs/comp2-demo/: auto_profile.json  eda_notebook.md  journal.jsonl  solution.py
runs/comp2-gptoss/: eda_notebook.md  incumbent.py  journal.jsonl  solution.py
runs/deepseek/: auto_profile.json  eda_notebook.md  incumbent.py  journal.jsonl  solution.py
runs/gigachat/: auto_profile.json  eda_notebook.md  journal.jsonl  solution.py
runs/gptoss/: auto_profile.json  journal.jsonl  solution.py
runs/qwen/: auto_profile.json  eda_notebook.md  journal.jsonl  solution.py
runs/yagpt/: auto_profile.json  eda_notebook.md  journal.jsonl  solution.py
tests/: test_pricing.py  test_tools.py
