[project]
name = "automl-agent"
version = "0.2.0"
description = "Autonomous agentic pipeline for classic tabular ML competitions"
requires-python = ">=3.10"
dependencies = [
    "catboost>=1.2",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
# GigaChat ReAct backend via langchain-gigachat.
gigachat = [
    "langchain-gigachat>=0.3",
    "langchain-core>=0.3",
]

# Yandex AI Studio (YandexGPT) ReAct backend via gRPC SDK.
yandex = ["yandex-cloud-ml-sdk>=0.5"]

# Yandex AI Studio OpenAI-compatible HTTP endpoint (qwen3-235b, deepseek,
# gpt-oss, ...). Uses the official OpenAI SDK.
yandex-openai = ["openai>=1.50", "httpx>=0.27"]

# Auto-EDA seed (ydata-profiling) — fully optional; the loop falls back to
# harness.eda if this isn't installed.
profiling = ["ydata-profiling>=4.13"]

# Convenience meta-extra to pull all optional backends + profiling at once.
full = [
    "langchain-gigachat>=0.3",
    "langchain-core>=0.3",
    "yandex-cloud-ml-sdk>=0.5",
    "ydata-profiling>=4.13",
]

dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
