[project]
name = "automl-agent"
version = "0.2.0"
description = "Autonomous agentic pipeline for classic tabular ML competitions"
requires-python = ">=3.10"
dependencies = [
    "catboost>=1.2",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
# Anthropic single-shot or future ReAct backend.
anthropic = ["anthropic>=0.40"]

# GigaChat ReAct backend via langchain-gigachat.
gigachat = [
    "langchain-gigachat>=0.3",
    "langchain-core>=0.3",
]

# Yandex AI Studio (YandexGPT) ReAct backend.
yandex = ["yandex-cloud-ml-sdk>=0.5"]

# Auto-EDA seed (ydata-profiling) — fully optional; the loop falls back to
# harness.eda if this isn't installed.
profiling = ["ydata-profiling>=4.13"]

# Convenience meta-extra to pull all optional backends + profiling at once.
full = [
    "anthropic>=0.40",
    "langchain-gigachat>=0.3",
    "langchain-core>=0.3",
    "yandex-cloud-ml-sdk>=0.5",
    "ydata-profiling>=4.13",
]

dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
